# rust-todo

backend/: Cargo.toml
backend/src/: main.rs
frontend/: index.html  package-lock.json  tsconfig.json
frontend/src/: App.svelte
frontend/src/DTO/: Todo.ts
frontend/src/scripts/: fetch.ts
