[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "=0.7.9", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
hyper = "1.5.1"
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.6.2", features = ["cors"]}
http = "1.1.0"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
